src2/objects/Action_Item_Parameter__c.object
<CustomObject>
    <fields>
        <fullName>Action_Item_Parameter_UUID__c</fullName>
        <externalId>true</externalId>
        <label>Action Item Parameter UUID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Action_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Action Item</label>
        <referenceTo>Action_Item__c</referenceTo>
        <relationshipLabel>Action Item Parameters</relationshipLabel>
        <relationshipName>Action_Item_Parameters2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email_From_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Email From Address</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>LST_OF_VAL__c.Domain__c</field>
                <operation>equals</operation>
                <value>EMAIL_FROM_ADDRESS</value>
            </filterItems>
            <filterItems>
                <field>$Source.Sales_Org_Code__c</field>
                <operation>equals</operation>
                <valueField>LST_OF_VAL__c.Sales_Org_Code__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>LST_OF_VAL__c</referenceTo>
        <relationshipLabel>Action Item Parameters</relationshipLabel>
        <relationshipName>Action_Item_Parameters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email_Template_Id__c</fullName>
        <label>Email Template</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Template_Name__c</fullName>
        <label>Email Template Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_To_Address__c</fullName>
        <description>List of receiver address email</description>
        <label>Email To Address</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Procedure__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Procedure</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Action_Item__c.Type__c</field>
                <operation>equals</operation>
                <value>Procedure</value>
            </filterItems>
            <filterItems>
                <field>Action_Item__c.Type__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Action_Item__c</referenceTo>
        <relationshipLabel>Action Item Parameters</relationshipLabel>
        <relationshipName>Action_Item_Parameters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Org_Code__c</fullName>
        <label>Sales Organization</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Sales_Organization</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Waiting_for_customer_duration__c</fullName>
        <label>Waiting for Customer Duration (hours)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Action Item Parameter</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Waiting_for_customer_duration__c</columns>
        <columns>Procedure__c</columns>
        <columns>Sales_Org_Code__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>Procedure__c</columns>
        <columns>Action_Item__c</columns>
        <columns>Waiting_for_customer_duration__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Procedure__c</field>
            <operation>equals</operation>
            <value>Removable Parts Required</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All2</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Action Item Parameter #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Action Item Parameters</pluralLabel>
    <recordTypes>
        <fullName>Send_Email</fullName>
        <active>true</active>
        <label>Send Email</label>
    </recordTypes>
    <recordTypes>
        <fullName>Step</fullName>
        <active>true</active>
        <label>Step</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Check_Waiting_For_Customer_Value</fullName>
        <active>true</active>
        <errorConditionFormula>IF(RecordType.Name=&apos;Step&apos;,Waiting_for_customer_duration__c &lt; 1, NULL)</errorConditionFormula>
        <errorDisplayField>Waiting_for_customer_duration__c</errorDisplayField>
        <errorMessage>Waiting for customer must be grater than 1</errorMessage>
    </validationRules>
</CustomObject>